[tool.poetry]
name = "jan"
version = "0.1.0"
description = ""
authors = ["Gérard Lichtert <62557229+thebaconfate@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
